// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/ExecWorkflow/AuditDetail/ResultDescribe render snap when has value 1`] = `
<body>
  <div>
    <div
      class="css-lpwde2"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="#8A8F99"
        />
      </svg>
      <input
        class="ant-input basic-input-wrapper result-describe-input css-1pd1cd5"
        placeholder="添加说明"
        type="text"
        value="this is a desc"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/ResultDescribe render snap when value is empty 1`] = `
<body>
  <div>
    <div
      class="css-lpwde2"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="#8A8F99"
        />
      </svg>
      <input
        class="ant-input basic-input-wrapper result-describe-input css-1pd1cd5"
        placeholder="添加说明"
        type="text"
        value=""
      />
    </div>
  </div>
</body>
`;
